fix: colors for buttons in dark mode

--- a/dark.css
+++ b/dark.css
@@ -4,6 +4,8 @@
   --border-color: #595959;
   --hover-background-color: #1d345c;
   --standout-bg-color: #1f1f1f;
+  --disabled-background-color: #333;
+  --disabled-text-color: #999;
 }
 
 header {
@@ -37,7 +39,7 @@ button, .button {
   border: 1px solid var(--border-color);
 }
 
-.button:hover, .button:hover, .button:visited {
+button:hover, .button:hover, .button:hover, .button:visited {
   background-color: var(--hover-background-color);
   color: white;
 }
